Исправлено множество ошибок начиная  с записи кодировки в ApiFilm до изменения назваиня класса Checker